Implemented SignUp endpoint
